--- a/src/scss/blocks/title.scss
+++ b/src/scss/blocks/title.scss
@@ -104,100 +104,49 @@
 	}
 }
 
+@include tablet {
+	.heading-row {
+		display: flex;
+		align-items: flex-start;
+		justify-content: space-between;
+		margin-bottom: 40px;
+		.link {
+			margin-top: 16px;
+		}
+	}
+	.section-text {
+		font-size: 16px;
+		&:not(:last-child) {
+			margin-bottom: 0.7rem;
+		}
+		p {
+			&:not(:last-child) {
+				margin-bottom: 0.7rem;
+			}
+		}
+	}
+	.title {
+		&-1 {
+			font-size: 32px;
+		}
+		// &-2 {
+		// 	margin-bottom: 20px;
+		// 	font-size: 20px;
+		// }
+		// &-3 {
+		// 	margin-bottom: 20px;
+		// 	font-size: 18px;
+		// }
+		// &-4 {
+		// 	margin-bottom: 20px;
+		// 	font-size: 17px;
+		// }
+	}
+}
 
-// @include tablet {
-// 	.heading-row {
-// 		flex-direction: column;
-// 		justify-content: flex-start;
-// 	}
-
-// 	.section-title {
-// 		.number {
-// 			font-size: 17px;
-// 		}
-// 		.neon {
-// 			font-size: 40px;
-// 		}
-// 		.default {
-// 			font-size: 32px;
-// 		}
-// 	}
-// 	.neon {
-// 		font-size: 40px;
-// 	}
-// 	.section-text {
-// 		font-size: 18px;
-// 	}
-
-// 	.default-wrapper {
-// 		padding: 36px 28px;
-// 	}
-
-// 	.title {
-// 		&-m1 {
-// 			font-size: 20px;
-// 		}
-// 		&-m2 {
-// 			font-size: 18px;
-// 		}
-// 		// &-m3 {
-// 		// 	font-weight: 700;
-// 		// 	font-size: 18px;
-// 		// 	line-height: 1.2;
-// 		// 	color: var(--font-color);
-// 		// }
-// 		&-m4 {
-// 			font-size: 26px;
-// 		}
-// 	}
-// }
-
-// @include mobile {
-// 	.heading,
-// 	.heading-row {
-// 		margin-bottom: 40px;
-// 	}
-// 	.section-title {
-// 		.neon {
-// 			font-size: 30px;
-// 		}
-// 		.default {
-// 			font-size: 26px;
-// 		}
-// 	}
-// 	.neon {
-// 		font-size: 30px;
-// 	}
-// 	.section-text {
-// 		font-size: 16px;
-// 	}
-
-// 	.default-wrapper {
-// 		padding: 30px 14px;
-// 	}
-
-// 	.title {
-// 		// &-m1 {
-// 		// 	font-size: 20px;
-// 		// }
-// 		&-m2 {
-// 			font-size: 16px;
-// 			line-height: 1.3;
-// 		}
-// 		// &-m3 {
-// 		// 	font-size: 18px;
-// 		// }
-// 		// &-m4 {
-// 		// 	font-size: 36px;
-// 		// 	line-height: 1.35;
-// 		// }
-// 	}
-// }
-
-// @media screen and (max-width: 390px) {
-// 	.default-wrapper {
-// 		margin-right: -5px;
-// 		margin-left: -5px;
-// 		width: calc(100% + 10px);
-// 	}
-// }
+@include mobile {
+	.default-wrapper,
+	.default-wrapper-dark {
+		padding: 24px 10px;
+	}
+}
