--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -19,6 +19,11 @@ body {
 section {
 	margin-bottom: 100px;
 }
+@include tablet {
+	section {
+		margin-bottom: 70px;
+	}
+}
 .row {
 	display: flex;
 	flex-wrap: wrap;
@@ -44,7 +49,7 @@ section {
 ::-webkit-scrollbar-thumb {
 	background: #000;
 	width: 0.375rem;
-	height: 18.75rem;
+	height: 12.75rem;
 	border-radius: 0.9375rem;
 }
 ::-webkit-scrollbar-thumb:hover {
