--- a/src/scss/widgets/benefits.scss
+++ b/src/scss/widgets/benefits.scss
@@ -44,3 +44,47 @@
     margin-bottom: 0;
   }
 }
+
+
+@include tablet {
+  .benefits {
+    &__grid {
+      gap: 20px;
+      .title-1 {
+        span {
+          margin-left: 10px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .benefits {
+    &__grid {
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+      .col:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+@include mobile {
+  .benefit {
+    padding: 20px 10px;
+    &-head {
+      font-size: 17px;
+    }
+    &-icon {
+      width: 30px;
+      height: 30px;
+      margin-right: 14px;
+    }
+    &-text {
+      font-size: 16px;
+    }
+  }
+}
