--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -167,3 +167,105 @@
     }
   }
 }
+
+
+@include tablet {
+  /*-----footer-----*/
+  .footer {
+    &__container {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      width: 100%;
+      flex-wrap: wrap;
+      .col {
+        &:nth-child(1) {
+          width: calc(50% - 15px);
+          margin-bottom: 44px;
+        }
+        &:nth-child(2) {
+          width: calc(50% - 15px);
+        }
+        &:nth-child(3) {
+          width: calc(50% - 15px);
+        }
+        &:nth-child(4) {
+          width: calc(50% - 15px);
+          align-items: flex-start;
+          text-align: left;
+          order: -1;
+          margin-bottom: 44px;
+        }
+      }
+    }
+    &__bottom {
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex-direction: column-reverse;
+      margin-top: 30px;
+      .col {
+        &:nth-child(1) {
+          margin-right: 0;
+          margin-top: 28px;
+        }
+        &:nth-child(2) {
+          align-items: flex-start;
+          justify-content: flex-start;
+          p {
+            font-size: 12px;
+          }
+        }
+      }
+    }
+    .certif-list {
+      justify-content: flex-start;
+      img {
+        max-height: 38px;
+      }
+    }
+    .logos-list {
+      justify-content: flex-start;
+      img {
+        max-height: 30px;
+      }
+    }
+  }
+
+  .socials {
+    align-items: flex-start;
+    a {
+      span {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@include tablet {
+  .footer {
+    &__container {
+      justify-content: flex-start;
+      .col {
+        &:nth-child(1) {
+          width: 100%;
+          margin-bottom: 44px;
+        }
+        &:nth-child(2) {
+          width: 100%;
+          margin-bottom: 30px;
+        }
+        &:nth-child(3) {
+          width: 100%;
+        }
+        &:nth-child(4) {
+          width: 100%;
+          margin-bottom: 30px;
+        }
+        .phone {
+          margin-bottom: 20px;
+          font-size: 22px;
+        }
+      }
+    }
+  }
+}
