--- a/src/scss/widgets/form-one.scss
+++ b/src/scss/widgets/form-one.scss
@@ -28,3 +28,48 @@
     }
   }
 }
+
+@include tablet {
+  .form-one {
+    .heading {
+      margin-bottom: 40px;
+      .title-1 {
+        margin-bottom: 20px;
+        span {
+          display: inline;
+          margin-left: 0;
+        }
+      }
+      .section-text {
+        margin-left: 0;
+      }
+    }
+    .form {
+      &-group {
+        width: calc(50% - 7px);
+        margin-bottom: 20px;
+        &:nth-child(4) {
+          width: 100%;
+        }
+      }
+      .link-input {
+        margin-left: 0;
+      }
+    }
+  }  
+}
+
+@include tablet {
+  .form-one {
+    .form {
+      &-group {
+        width: 100%;
+        margin-bottom: 10px;
+      }
+      .link-input {
+        margin-left: 0;
+        margin-top: 10px;
+      }
+    }
+  }  
+}
