--- a/src/scss/widgets/gallery.scss
+++ b/src/scss/widgets/gallery.scss
@@ -26,3 +26,17 @@
     }
   }
 }
+
+@include mobile {
+  .gallery {
+    &__grid {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 230px 110px 170px 170px;
+      grid-template-areas:
+        "one one"
+        "two three"
+        "four four"
+        "five five";
+    }
+  }
+}
