--- a/src/scss/widgets/history.scss
+++ b/src/scss/widgets/history.scss
@@ -85,3 +85,78 @@
     margin-top: 40px;
   }
 }
+
+@include tablet {
+  .history {
+    .heading {
+      .title-1 {
+        span {
+          margin-left: 60px;
+        }
+      }
+    }
+    &-tabs {
+      flex-direction: column;
+      .tabs-nav {
+        padding: 0;
+        margin-bottom: 20px;
+        flex-direction: row;
+        align-items: flex-end;
+        justify-content: flex-start;
+        width: 100%;
+        overflow-x: auto;
+        &::-webkit-scrollbar,
+        &::-webkit-scrollbar-thumb {
+          display: none;
+        }
+        li {
+          &:not(:last-child) {
+            margin-bottom: 0;
+            margin-right: 24px;
+          }
+          a {
+            font-size: 16px;
+            &::before {
+              transform: none;
+              top: auto;
+              left: 0;
+              right: 0;
+              bottom: -1px;
+              width: 100%;
+              height: 1px;
+              background-color: var(--font-color);
+            }
+            &.active {
+              font-size: 24px;
+            }
+          }
+        }
+      }
+    }
+    .link {
+      margin-left: 0;
+      margin-top: 28px;
+    }
+  }
+}
+
+@include mobile {
+  .history {
+    &__item {
+      justify-content: flex-start;
+      flex-direction: column;
+      .default-wrapper {
+        width: 100%;
+        margin-bottom: 10px;
+        p {
+          &:not(:last-child) {
+            margin-bottom: 0.7rem;
+          }
+        }
+      }
+    }
+    &__img {
+      width: 100%;
+    }
+  }
+}
