--- a/src/scss/widgets/reviews.scss
+++ b/src/scss/widgets/reviews.scss
@@ -21,9 +21,6 @@
       }
     }
     .heading {
-      display: flex;
-      align-items: flex-end;
-      flex-wrap: wrap;
       margin-bottom: 24px;
       width: 100%;
       .title-1 {
@@ -36,12 +33,12 @@
       .section-text {
         width: 460px;
         margin-left: 60px;
-        margin-right: 20px;
       }
-      .link {
-        margin-left: auto;
-        margin-bottom: 1.5rem;
-      }
+    }
+    .link {
+      display: flex;
+      width: fit-content;
+      margin: -40px 0 40px auto;
     }
     &__container {
       display: flex;
@@ -157,5 +154,137 @@
   img {
     opacity: .3;
     cursor: pointer;
+  }
+}
+
+.reviews .desktop-hidden {
+  display: none;
+}
+
+
+@include tablet {
+  .review {
+    &s {
+      .container {
+        display: flex;
+        flex-direction: column;
+      }
+      .desktop-hidden {
+        display: flex;
+      }
+      .mob-hidden {
+        display: none;
+      }
+      .page-heading {
+        margin-bottom: 12px;
+        .title-1 {
+          span {
+            display: inline;
+            margin-left: 0;
+          }
+        }
+      }
+      .heading {
+        margin-bottom: 36px;
+        .title-1 {
+          span {
+            margin-left: 0px;
+            display: inline;
+          }
+        }
+        .section-text {
+          margin-left: 0;
+        }
+      }
+      .link {
+        display: inline-flex;
+        margin: 28px 0 0 0;
+        order: 1;
+      }
+      &Swiper {
+        overflow: hidden;
+        .swiper-slide {
+          width: 100%;
+        }
+      }
+    }
+    &-avatar {
+      width: 60px !important;
+      height: 60px !important;
+    }
+    &-head {
+      align-items: flex-start;
+    }
+    &-info {
+      padding-top: 6px;
+      h3 {
+        font-size: 17px;
+      }
+      p {
+        font-size: 16px;
+      }
+    }
+    .rating {
+      position: relative;
+      top: auto;
+      right: auto;
+      margin-top: 8px;
+    }
+    &-text {
+      margin-top: 20px;
+      p {
+        font-size: 16px;
+        &:not(:last-child) {
+          margin-bottom: 0.7rem;
+        }
+      }
+    }
+  }
+  .review-form {
+    .default-wrapper {
+      padding-top: 30px;
+    }
+    .form {
+      .row {
+        .form-group {
+          width: calc(50% - 8px);
+          &:not(:last-child) {
+            margin-right: auto;
+          }
+          &:nth-child(odd) {
+            margin-right: 16px;
+          }
+        }
+      }
+      textarea {
+        width: 100%;
+      }
+      &-group-title {
+        font-size: 15px;
+      }
+    }
+  }
+}
+
+@include mobile {
+  .review {
+    padding: 17px 10px;
+    &-avatar {
+      width: 40px !important;
+      height: 40px !important;
+      margin-right: 10px;
+    }
+  }
+  .review-form {
+    .form {
+      .row {
+        .form-group {
+          width: 100%;
+          &:nth-child(odd) {
+            margin-right: 0;
+          }
+        }
+      }
+    }
   }
 }
