Адаптация: Модальные окна, формы

--- a/src/scss/blocks/buttons.scss
+++ b/src/scss/blocks/buttons.scss
@@ -295,4 +295,19 @@
 			font-size: 26px;
 		}
 	}
+	.link-withicon {
+		i {
+			margin-right: 8px;
+			font-size: 18px;
+		}
+		span {
+			font-size: 15px;
+		}
+	}
+	.link,
+	.link-input,
+	.link-dark,
+	.link-grey {
+		font-size: 15px;
+	}
 }
