--- a/src/template/modals.html
+++ b/src/template/modals.html
@@ -2,7 +2,7 @@
   <div class="modal-heading">
     <h2 class="modal-title">Войти</h2>
   </div>
-  <form action="" class="form">
+  <form action="" class="form form-login">
     <div class="form-group">
       <input type="email" class="form-input" placeholder="Email">
     </div>
@@ -21,7 +21,7 @@
   <div class="modal-heading">
     <h2 class="modal-title">Создать аккаунт</h2>
   </div>
-  <form action="" class="form">
+  <form action="" class="form form-login">
     <div class="form-group">
       <input type="text" class="form-input" placeholder="Имя">
     </div>
