--- a/src/scss/blocks/buttons.scss
+++ b/src/scss/blocks/buttons.scss
@@ -288,6 +288,10 @@
 // }
 
 @include tablet {
+	.btn {
+		font-size: 15px;
+		line-height: 18px;
+	}
 	.btn-icon {
 		width: 26px;
 		height: 26px;
@@ -309,5 +313,8 @@
 	.link-dark,
 	.link-grey {
 		font-size: 15px;
+	}
+	.download-link {
+		font-size: 16px;
 	}
 }
