--- a/src/scss/blocks/card.scss
+++ b/src/scss/blocks/card.scss
@@ -97,3 +97,31 @@
     margin-top: auto;
   }
 }
+
+@include tablet {
+  .card {
+    &-name {
+      font-size: 16px;
+    }
+    &-text {
+      font-size: 16px;
+    }
+    &-price {
+      .current {
+        font-size: 16px;
+      }
+      .old {
+        font-size: 14px;
+      }
+      // &-info {
+      //   padding: 5px 6px;
+      //   font-size: 14px;
+      //   img {
+      //     width: 16px;
+      //     height: 16px;
+      //     margin-right: 6px;
+      //   }
+      // }
+    }
+  }
+}
