--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -478,6 +478,28 @@ input[type="number"]::-webkit-inner-spin-button {
 	}
 }
 
+@include tablet {
+	.woocommerce-ordering {
+		.select2-selection__rendered,
+		.select2-container .select2-selection--single {
+			font-size: 12px;
+			color: var(--font-color) !important;
+			line-height: 14px;
+			border-radius: 0px;
+		}
+		.select2-container .select2-selection--single .select2-selection__rendered {
+			// padding: 4px 7px;
+			font-size: 12px;
+			color: var(--font-color) !important;
+		}
+		.select2-container--default .select2-selection--single .select2-selection__arrow {
+			&::before {
+				color: var(--font-color);
+			}
+		}
+	}
+}
+
 @include mobile {
 	.form {
 		&-title {
@@ -532,5 +554,37 @@ input[type="number"]::-webkit-inner-spin-button {
 				margin-top: 10px;
 			}
 		}
+	}
+	.select2 {
+		width: auto !important;
+		height: 44px;
+	}
+	.select2-selection__rendered,
+	.select2-container .select2-selection--single {
+		padding-right: 40px;
+		height: 44px;
+		font-size: 15px;
+		line-height: 18px;
+	}
+	.select2-container .select2-selection--single .select2-selection__rendered {
+		padding: 13px 20px;
+		font-size: 15px;
+	}
+	.select2-container--default .select2-selection--single .select2-selection__arrow {
+		width: 18px;
+		height: 18px;
+		top: 50%;
+		right: 12px;
+		transform: translateY(-50%);
+		&::before {
+			font-size: 18px;
+		}
+	}
+	.select2-dropdown {
+		font-size: 15px !important;
+		border-radius: 0px 0px 8px 8px !important;
+	}
+	.select2-results__option {
+		padding: 7px 7px;
 	}
 }
