--- a/src/scss/blocks/tabs.scss
+++ b/src/scss/blocks/tabs.scss
@@ -60,3 +60,37 @@
 		}
 	}
 }
+
+@include mobile {
+	.tabs-style {
+		.tabs-nav {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			justify-content: flex-start;
+		}
+		.tabs-nav li {
+			margin-top: 4px;
+			margin-bottom: 4px;
+			&:not(:last-child) {
+				margin-right: 0;
+			}
+		}    
+		.tabs-nav a {
+			font-size: 15px;
+			&::before {
+				bottom: 0px;
+			}
+		}
+		.tabs-item {
+			div {
+				p {
+					font-size: 16px;
+					&:not(:last-child) {
+						margin-bottom: 0.7rem;
+					}
+				}
+			}
+		}
+	}
+}
