--- a/src/scss/widgets/contacts.scss
+++ b/src/scss/widgets/contacts.scss
@@ -141,3 +141,94 @@
     }
   }
 }
+
+@include tablet {
+  .contacts {
+    .page-heading {
+      margin-bottom: 30px;
+    }
+    &__container {
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex-direction: column-reverse;
+      padding: 0;
+      .map {
+        position: relative;
+        left: auto;top: auto;
+        width: 100%;
+        height: 400px;
+        margin-top: 10px;
+      }
+    }
+    &__wrapper {
+      padding: 30px 20px;
+      width: 100%;
+    }
+  }
+  
+  .team {
+    .heading {
+      .title-1 {
+        span {
+          display: inline;
+          margin-left: 0;
+        }
+      }
+    }
+    &Swiper {
+      .swiper-nav {
+        margin-bottom: 20px;
+      }
+    }
+    &card {
+      &-name {
+        font-size: 16px;
+      }
+      &-post {
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@include mobile {
+  .contacts {
+    &__container {
+      .map {
+        height: 150px;
+      }
+    }
+    &__wrapper {
+      padding: 30px 10px;
+      .title-2 {
+        margin-bottom: 24px;
+        font-size: 20px;
+      }
+    }
+    &__list {
+      .row {
+        .contacts-item:not(:last-child) {
+          margin-right: 40px;
+        }
+      }
+    }
+    &__group {
+      &:not(:last-child) {
+        margin-bottom: 16px;
+        padding-bottom: 16px;
+      }
+    }
+      &-item {
+        i {
+          font-size: 20px;
+        }
+        img {
+          width: 20px;
+          height: 20px;
+        }
+        &:not(:last-child) {
+          margin-bottom: 16px;
+        }
+      }
+  }
+}
