--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -479,6 +479,24 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @include tablet {
+	.row-3 {
+		flex-direction: column;
+		&>.col {
+			margin-right: 0;
+			margin-bottom: 20px;
+			width: 100%;
+			&>.row-1:not(:last-child) {
+				margin-bottom: 16px;
+			}
+			&:nth-child(3n) {
+				margin-right: 0;
+			}
+			.link {
+				margin-top: 14px;
+				margin-bottom: 14px;
+			}
+		}
+	}
 	.woocommerce-ordering {
 		.select2-selection__rendered,
 		.select2-container .select2-selection--single {
@@ -503,7 +521,7 @@ input[type="number"]::-webkit-inner-spin-button {
 @include mobile {
 	.form {
 		&-title {
-			margin-bottom: 20px;
+			margin-bottom: 8px;
 			font-size: 16px;
 		}
 		&-tooltext {
